# Creator-Studio

./: .gitignore  AGENT.md  CHECKLIST.md  README.md  claude.md  package-lock.json  package.json  vite.config.ts
.hydra/: config.json  journal.jsonl  layout.kdl  locks.db  locks.db-shm
bug/: default_provider_dashscope_qwen_demo.md  package_building_notes.md
docs/: Creator开发计划.md  T1.6-test-report.md  T2.6-验证报告.md  novel-context-embedding-plan.md  待解决问题清单.md  架构说明.md
scripts/: build-ai-engine.mjs  copy-release-artifacts.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_bridge.rs  ai_daemon.rs  ai_proxy.rs  chapter.rs  config.rs  import.rs  keyring_store.rs  lib.rs  presets.rs  project.rs  rag.rs  recent_projects.rs  security.rs  session.rs  summary.rs  write_protection.rs
src-tauri/src/file_ops/: append.rs  list.rs  mod.rs  read.rs  search.rs  write.rs
tasks/: t1769954680.json  t1769954680.md  t1769954706.json  t1769954706.md  t1769955731.json  t1769955731.md  t1769959195.json  t1769959195.md  t1769963362.json  t1769963362.md  t1769963974.json  t1769963974.md  t1769964835.json  t1769964835.md  t1769968900.json  t1769968900.md  t1770001329.json  t1770001692.json  t1770002277.json  t1770003423.json  t1770005161.json  t177000516101.json  t1770005953.json  t177000595301.json  t1770006912.json  t3001-project-structure.md  t3001.json  t3002-project-ui.md  t3002.json  t3003-chapter-crud.md  t3003.json  t3004-chapter-list-ui.md  t3004.json  t3005-import-txt.md  t3005.json  t3006-editor.md  (+26 more)
(+83 files in other folders)
